# advent_of_code

./: .gitignore  README.md  pyproject.toml
2015/day-1/: input.py  part_1.py  part_2.py  test_part_1.py  test_part_2.py
2018/day-1/: part2.py
2020/day-1/: description.txt  part_1.py  part_2.py  tests.py
2020/day-2/: description.txt  main.py  part_1.py  part_2.py  tests.py
2020/day-3/: common.py  description.txt  part_1.py  part_2.py  tests.py
2021/day-1/: part_1.py  part_2.py  tests.py
2021/day-2/: description.txt  part_1.py  part_2.py  tests.py
2021/day-3/: description.txt  part_1.py  part_2.py  tests.py
2021/day-4/: description.txt  part_1.py  part_2.py  tests.py
day-2/: part1.py
unknow_year/day-1/: part1.py
