[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Advent of code exercises"
authors = ["csestelo <sestelos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
